--- a/index.html
+++ b/index.html
@@ -1621,22 +1621,21 @@
                                                     <div class="drawer-spacer">
                                                         <div class="media
                                                             align-items-center">
-
                                                             <!-- <a href="index.html"
                                                                 class="drawer-brand-circle
                                                                 mr-2">H</a> -->
-                                                            <a href="index.html">
-                                                                <img src="assets/images/CIT logo.png" alt="H" width="50px" height="50px" />
-                                                            </a>
-                                                            <div
-                                                                class="media-body">
-                                                                <a
-                                                                    href="index.html"
-                                                                    class="h5
-                                                                    m-0
-                                                                    text-link">
-                                                                &nbsp;&nbsp;ITP25533Z</a>
-                                                            </div>
+                                                                <a href="index.html">
+                                                                    <img src="assets/images/CIT logo.png" alt="H" width="50px" height="50px" />
+                                                                </a>
+                                                                <div
+                                                                    class="media-body">
+                                                                    <a
+                                                                        href="index.html"
+                                                                        class="h5
+                                                                        m-0
+                                                                        text-link">
+                                                                    &nbsp;&nbsp;ITP25533Z</a>
+                                                                </div>
                                                         </div>
                                                     </div>
                                                     <!-- HEADING -->
@@ -1650,23 +1649,45 @@
                                                         data-children=".drawer-submenu">
                                                         <li
                                                             class="drawer-menu-item">
-                                                            <a href="personalDetails.html">
-                                                                <i class="material-icons">
-                                                                    face
+                                                            <a
+                                                                href="cityMunicipality.html">
+                                                                <i
+                                                                    class="material-icons">
+                                                                    location_city
                                                                 </i>
-                                                                <span class="drawer-menu-text">
-                                                                    Personal Details
+                                                                <span
+                                                                    class="drawer-menu-text">
+                                                                    City/Municipality
                                                                 </span>
                                                             </a>
                                                         </li>
                                                         <li
                                                             class="drawer-menu-item">
-                                                            <a href="educationalBackground.html">
-                                                                <i class="material-icons">
+                                                            <a
+                                                                href="personalDetails.html">
+                                                                <i
+                                                                    class="material-icons">
+                                                                    face
+                                                                </i>
+                                                                <span
+                                                                    class="drawer-menu-text">
+                                                                    Personal
+                                                                    Details
+                                                                </span>
+                                                            </a>
+                                                        </li>
+                                                        <li
+                                                            class="drawer-menu-item">
+                                                            <a
+                                                                href="educationalBackground.html">
+                                                                <i
+                                                                    class="material-icons">
                                                                     history_edu
-                                                                </i>    
-                                                                <span class="drawer-menu-text">
-                                                                    Educational Background
+                                                                </i>
+                                                                <span
+                                                                    class="drawer-menu-text">
+                                                                    Educational
+                                                                    Background
                                                                 </span>
                                                             </a>
                                                         </li>
@@ -1772,7 +1793,8 @@
                                                                     UI
                                                                     Components</span>
                                                             </a>
-                                                            <ul class="collapse"id="uiComponentsMenu">
+                                                            <ul class="collapse"
+                                                                id="uiComponentsMenu">
                                                                 <li
                                                                     class="drawer-menu-item"><a
                                                                         href="ui-buttons.html">Buttons</a></li>
@@ -1817,7 +1839,8 @@
                                                                     class="drawer-menu-text">
                                                                     Forms</span>
                                                             </a>
-                                                            <ul class="collapse"id="formsMenu">
+                                                            <ul class="collapse"
+                                                                id="formsMenu">
                                                                 <li
                                                                     class="drawer-menu-item"><a
                                                                         href="form-controls.html">Form
@@ -2011,7 +2034,8 @@
                                                                     class="drawer-menu-text">
                                                                     Error</span>
                                                             </a>
-                                                            <ul class="collapse"id="errorsMenu">
+                                                            <ul class="collapse"
+                                                                id="errorsMenu">
                                                                 <li
                                                                     class="drawer-menu-item"><a
                                                                         href="error-403.html">Error
@@ -2048,7 +2072,8 @@
                                                                     class="drawer-menu-text">
                                                                     Extra</span>
                                                             </a>
-                                                            <ul class="collapse"id="extrasMenu">
+                                                            <ul class="collapse"
+                                                                id="extrasMenu">
                                                                 <li
                                                                     class="drawer-menu-item"><a
                                                                         href="shopping-cart.html">Shopping
